--- a/index.html
+++ b/index.html
@@ -26,20 +26,21 @@ This is a showcase for a few things I am interested in such as the following:</p
     
 <u1>
 		
-<li>programming</li>
+<li>Programming</li>
 		
-<li>making</li>
+<li>Making</li>
 		
-<li>building</li>
+<li>Building</li>
 		
-<li>nature</li>
+<li>Nature</li>
 	
 </u1>
 
 <p>I hope you enjoy!</p>
 	
-<p><a href="https://www.google.com">Google</a>
-</p> 	
+<p><a href="javaprojects.html">My Java Projects</a></p>
+<p><a href="resume.html">My Resume</a></p>
+<p><a href="retropie.html">My Retropie Page</a></p> 
 <p><button>Change user</button></p>
 <script src="scripts/main.js"></script>
   
