--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ This is a showcase for a few things I am interested in such as the following:</p
 <p>I hope you enjoy!</p>
 	
 <p><a href="javaprojects.html">My Java Projects</a></p>
-<p><a href="resume.html">My Resume</a></p>
+<p><a href="resume-page.html">My Resume</a></p>
 <p><a href="retropie.html">My Retropie Page</a></p> 
 <p><button>Change user</button></p>
 <script src="scripts/main.js"></script>
