--- a/aboutme.html
+++ b/aboutme.html
@@ -3,8 +3,9 @@
   <head>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">  	
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/favicon.ico">
     <meta charset="utf-8">
-    <title>My Resume</title>
+    <title>Will D's Cool Stuff: About Me</title>
   </head>
   <body>
   	<header>
@@ -22,8 +23,11 @@
     <main>
     <article>
     <h2>About Me</h2>
-    <p>Check out my resume.</p>
-    <img id="picture" src="images/retropie.png" alt="Retropie">
+    <p>I am Will D., a computer science student at UMUC.  I have work experience as an environmental
+    scientist for a government contractor and as a high school math teacher.  I will  
+    finish my CS degree in August, 2017 and am looking for employment opportunities in that field.
+    Most of my programming experience is in Java, although I have some experience with
+    C and Python.</p>
     <p><a href="index.html">Back to Home Page</a></p>
     </article>
     </main>
