--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,9 @@
   <head>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">  	
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/favicon.ico">  
     <meta charset="utf-8">
-    <title>Will D's Portfolio</title>
+    <title>Will D's Cool Stuff: Portfolio</title>
   </head>
   <body>
     <header>
@@ -23,9 +24,10 @@
     <main>
   	<article>
     <h2>Portfolio</h2>
-    <p>I have been learning how to program, mainly in Java, for my courses at UMUC.  I made a 
-    number of projects and wanted to showcase a few of them here.</p>
-    <img id="picture" src="images/java.png" alt="Java Logo">
+    <p>I learned how to code, mainly in Java, during my coursework at UMUC.  I also have experience
+    making simple programs in C and Python.  I have made a number of projects and wanted 
+    to showcase a few of them here.</p>
+    <img class="picture" src="images/java.png" alt="Java Logo">
     <p><a href="https://github.com/mrdonabizzle">My Github Profile</a></p>
     <p><a href="index.html">Back to Home Page</a></p>
     </article>
