--- a/otherstuff.html
+++ b/otherstuff.html
@@ -3,8 +3,9 @@
   <head>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">  	
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/favicon.ico">
     <meta charset="utf-8">
-    <title>Other Stuff</title>
+    <title>Will D's Cool Stuff: Other Stuff</title>
   </head>
   <body>
     <header>
@@ -23,18 +24,33 @@
   	<article>
     <h2>Other Stuff</h2>
     <h3>Raspberry Pi</h3>
-    <p>I have been interested in Raspberry Pi for a while now.  I have built several
-    RetroPie gaming systems, as well as assembled a Raspberry Pi with Raspbian for
-    general, everyday use.</p>
-    <img id="picture" src="images/raspberrypi.png" alt="Retropie" title="Click to see more pictures">
+    <p>I have been interested in Raspberry Pi for a few years now.  I have built several
+    RetroPie gaming systems and used a few of them with Raspbian as
+    a cheap alternative desktop.  Last year, I incorporated several others into robotics projects
+    using using the GoPiGo kits from Dexter Industries.  Currently I am building a
+    PiGrrl, which is a handheld that looks like a Game Boy.</p>
+    <table>
+      <thead>
+      <tr>
+      <th><img src="images/raspberrypi.png" alt="Raspberry Pi" title="Raspberry Pi" class="picture"></th>
+      <th><img src="images/retropie.png" alt="RetroPie" title="RetroPie" class="picture"></th>
+      </tr>
+      </thead>
+    </table>
     <p>Raspberry Pi Links</p>
       <ul>
         <li><a href=https://retropie.org.uk/>RetroPie Homepage</a></li>
         <li><a href=https://github.com/retropie/retropie-setup/wiki/First-Installation>How to Install RetroPie</a></li>
       </ul>
     <h3>Podcasts</h3>
+    <p>I really like listening to podcasts, especially while commuting in my car.  Some of
+    my favorites are Dan Carlin's Hardcore History, Radio Lab, and Freakonomics Radio.  You
+    can check out an episode of Dan Carlin's Hardcore History below.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/J7CmBN741Vw" frameborder="0" allowfullscreen></iframe>
     <h3>Snowboarding</h3>
+    <p>Snowboarding is one of my favorite outdoor activities.  In my opinion, it is about
+    as much fun as you can have outside in the winter.  While I can't do any tricks like
+    the guys in the video below, I definitely like watching snowboarding videos.</p>
     <iframe width="560" height="315" frameborder="0" src="https://www.youtube.com/embed/UtZofZjccBs" frameborder="0" allowfullscreen></iframe>
     <h3>Hiking</h3>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d389198.53882555244!2d-105.95667192530833!3d40.35091726012862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876979e4455903e9%3A0xfa27ee43a78e8217!2sRocky+Mountain+National+Park!5e0!3m2!1sen!2sus!4v1482798836733" 
