--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
   <head>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">  	
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/favicon.ico">
     <meta charset="utf-8">
-    <title>My Resume</title>
+    <title>Will D's Cool Stuff: Contact Me</title>
   </head>
   <body>
   	<header>
