--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
   </head>
   <body>
   	<header>
-    <h1><img src="images/willd-logo.png" alt="Will D's Logo"></h1>
+    <h1><a href="index.html"><img class="logo" src="images/willd-logo.png" alt="Will D's Logo"></a></h1>
     <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
