--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
     <article>
     <h2>Contact</h2>
     <p>Contact me.</p>
+      <p><a href="contact.php">Test Contact Page</a></p>
     <p><a href="index.html">Back to Home Page</a></p>
     </article>
     </main>
