--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,12 @@
     <p>I learned how to code, mainly in Java, during my coursework at UMUC.  I also have experience
     making simple programs in C and Python.  I have made a number of projects and wanted 
     to showcase a few of them here.</p>
+    <ul>
+      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/AtmMachine/src/atmmachine">ATM Machine Project</a></li>
+      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/SequenceCalculator/src/sequencecalculator">Sequence Calculator Project</a></li>
+      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/StudentDatabase/src/studentdatabase">Student Database Project</a></li>
+      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/Data%20Structures">Data Structures Projects</a></li>
+    </ul>
     <img class="picture" src="images/java.png" alt="Java Logo">
     <p><a href="https://github.com/mrdonabizzle">My Github Profile</a></p>
     <p><a href="index.html">Back to Home Page</a></p>
