--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <!--
     <img src="images/3-lightning-on-water.jpg" alt="Photograph of lightning over water">
     -->
-    <p>Welcome to Will D's Cool Stuff! This is my first attempt at building a website using
-    HTML, CSS, and JavaScript.  I have included some things that I am interested in on the 
-    following pages.</p>
+    <p>Welcome to Will D's Cool Stuff! I created this website to practice using
+    HTML, CSS, and JavaScript, as well as showcase some of my Java projects.
+    I have also dedicated some space to a few other things I am interested in.</p>
     <p>You can read more about me on the <a href="aboutme.html">About Me</a>
     page.</p>
     <p>If you would like to see some of the programs I have made in Java, check out my 
