--- a/aboutme.html
+++ b/aboutme.html
@@ -23,11 +23,12 @@
     <main>
     <article>
     <h2>About Me</h2>
-    <p>I am Will D., a computer science student at UMUC.  I have work experience as an environmental
-    scientist for a government contractor and as a high school math teacher.  I will  
-    finish my CS degree in August, 2017 and am looking for employment opportunities in that field.
-    Most of my programming experience is in Java, although I have some experience with
-    C and Python.</p>
+    <p>Hello, I am Will Donabedian, a computer science student at UMUC.  I have professional experience as an environmental
+    scientist and as a high school math teacher.  I will  
+    finish my CS degree in August, 2017 and am looking for opportunities in software engineering.
+    Most of my programming experience is in Java, although I was introduced to programming with
+    C and Python.  Check out my <a href="https://mrdonabizzle.github.io/portfolio.html">Portfolio page</a>
+    to see some of my recent projects in Java.</p>
     <p><a href="index.html">Back to Home Page</a></p>
     </article>
     </main>
