--- a/portfolio.html
+++ b/portfolio.html
@@ -24,14 +24,16 @@
     <main>
   	<article>
     <h2>Portfolio</h2>
-    <p>I learned how to code, mainly in Java, during my coursework at UMUC.  I also have experience
-    making simple programs in C and Python.  I have made a number of projects and wanted 
-    to showcase a few of them here.</p>
+    <p>My first taste of programming was in Python, which I liked a lot.  However, once I started my CS degree I gained an introductory 
+    level understanding of C, and now I code almost exclusively code in Java.
+    I made a number of projects during my recent courses and wanted 
+    to showcase a few of them here.  I still have 5 CS courses left, including my senior capstone course, so be sure to
+    check for new projects posted here in the near future.</p>
     <ul>
+      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/Data%20Structures">Data Structures Projects</a></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/AtmMachine/src/atmmachine">ATM Machine Project</a></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/SequenceCalculator/src/sequencecalculator">Sequence Calculator Project</a></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/StudentDatabase/src/studentdatabase">Student Database Project</a></li>
-      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/Data%20Structures">Data Structures Projects</a></li>
     </ul>
     <img class="picture" src="images/java.png" alt="Java Logo">
     <p><a href="https://github.com/mrdonabizzle">My Github Profile</a></p>
