--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <main>
   	<article>
     <h2>Portfolio</h2>
-    <p>My first taste of programming was in Python, which I liked a lot.  However, once I started my CS degree I gained an introductory 
+    <p>My first taste of programming was in Python, which I liked a lot.  However, since I started my CS degree I gained an introductory 
     level understanding of C, and now I code almost exclusively code in Java.
     I made a number of projects during my recent courses and wanted 
     to showcase a few of them here.  I still have 5 CS courses left, including my senior capstone course, so be sure to
