--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <article>
     <h2>Contact</h2>
     <p>If you would like to get in touch with me, please send me an email by clicking 
-      <a href="mailto:wpdonabedian@gmail.com.com">here</a>.</p>
+      <a href="mailto:wpdonabedian@gmail.com">here</a>.</p>
     <p><a href="index.html">Back to Home Page</a></p>
     </article>
     </main>
