--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
     <main>
     <article>
     <h2>Contact</h2>
-    <p>If you would like to get in touch with me, please send me an email by clicking 
-      <a href="mailto:wpdonabedian@gmail.com">here</a>.</p>
+    <p>If you would like to get in touch with me, please send me an email at 
+      <a href="mailto:wpdonabedian@gmail.com">wpdonabedian@gmail.com</a>.</p>
     <p><a href="index.html">Back to Home Page</a></p>
     </article>
     </main>
