--- a/otherstuff.html
+++ b/otherstuff.html
@@ -53,6 +53,9 @@
     the guys in the video below, I definitely like watching snowboarding videos.</p>
     <iframe width="560" height="315" frameborder="0" src="https://www.youtube.com/embed/UtZofZjccBs" frameborder="0" allowfullscreen></iframe>
     <h3>Hiking</h3>
+    <p>Hiking is another one of my favorite outdoor activities.  A few years ago, I visited Rocky Mountain National Park.
+    The scenery and terrain were amazing.  My favorite hike was to the summit of Mount Ida, which was pretty grueling, but
+    the views were well worth the effort.  I would love to go back again sometime soon.</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d389198.53882555244!2d-105.95667192530833!3d40.35091726012862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876979e4455903e9%3A0xfa27ee43a78e8217!2sRocky+Mountain+National+Park!5e0!3m2!1sen!2sus!4v1482798836733" 
     width="560" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
     <p><a href="index.html">Back to Home Page</a></p>
