--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     level understanding of C, and now I code almost exclusively code in Java.
     I made a number of projects during my recent courses and wanted 
     to showcase a few of them here.  I still have 5 CS courses left, including my senior capstone course, so be sure to
-    check back for new projects posted here in the near future.</p>
+    check back for new projects in the near future.</p>
     <ul>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/Data%20Structures">Data Structures Projects</a></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/AtmMachine/src/atmmachine">ATM Machine Project</a></li>
