--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,13 @@
     <main>
   	<article>
     <h2>Portfolio</h2>
-    <p>My first taste of programming was in Python, which I liked a lot.  However, since I started my CS degree I gained an introductory 
-    level understanding of C, and now I code almost exclusively code in Java.
-    I made a number of projects during my recent courses and wanted 
-    to showcase a few of them here.  I still have 5 CS courses left, including my senior capstone course, so be sure to
+    <p>The following list includes some of my recent Java programs.
+    I still have 5 CS courses left, including my senior capstone course, so be sure to
     check back for new projects in the near future.</p>
     <ul>
-      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/Data%20Structures">Data Structures Projects</a></li>
+      <li>I just completed a course in data structures.  The projects in this folder implement data structures like
+        binary search trees, graphs, etc.<br>
+        <a href="https://github.com/mrdonabizzle/Java/tree/master/Data%20Structures">Data Structures Projects</a></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/AtmMachine/src/atmmachine">ATM Machine Project</a></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/SequenceCalculator/src/sequencecalculator">Sequence Calculator Project</a></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/StudentDatabase/src/studentdatabase">Student Database Project</a></li>
