--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,17 @@
     I still have 5 CS courses left, including my senior capstone course, so be sure to
     check back for new projects in the near future.</p>
     <ul>
-      <li>I just completed a course in data structures.  The projects in this folder implement data structures like
-        binary search trees, graphs, etc.<br>
-        <a href="https://github.com/mrdonabizzle/Java/tree/master/Data%20Structures">Data Structures Projects</a></li>
-      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/AtmMachine/src/atmmachine">ATM Machine Project</a></li>
-      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/SequenceCalculator/src/sequencecalculator">Sequence Calculator Project</a></li>
-      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/StudentDatabase/src/studentdatabase">Student Database Project</a></li>
+      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/Data%20Structures">Data Structures Projects</a>
+         I just completed a course in data structures.  The four projects at this link implement data structures like
+        binary search trees, graphs, etc.</li>
+      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/AtmMachine/src/atmmachine">ATM Machine Project</a>
+        This program implements an ATM machine GUI that allows the user to make transactions with checking and savings
+        accounts.</li>
+      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/SequenceCalculator/src/sequencecalculator">Sequence Calculator Project</a>
+       This program implements a calculator GUI that allows the user to calculate a term in a sequence using either recursion or iteration.</li>
+      <li><a href="https://github.com/mrdonabizzle/Java/tree/master/StudentDatabase/src/studentdatabase">Student Database Project</a>
+       This program implements a GUI that allows the user to add, modify, or delete entries in a student database.  It was my first
+      project using a hash map.</li>
     </ul>
     <p><a href="https://github.com/mrdonabizzle">My Github Profile</a></p>
     <img class="picture" src="images/java.png" alt="Java Logo">
