--- a/aboutme.html
+++ b/aboutme.html
@@ -23,9 +23,10 @@
     <main>
     <article>
     <h2>About Me</h2>
-    <p>Hello, I am Will Donabedian, a computer science student at UMUC.  I have professional experience as an environmental
-    scientist and high school math teacher.  I will finish my CS degree in August, 2017 and am looking for opportunities in 
-    software engineering.  Most of my programming experience is in Java, although I was introduced to programming with
+    <p>Hello, my name is Will Donabedian, and I am a computer science student at UMUC.  I have professional experience as 
+    a high school math teacher and environmental scientist.  I will finish my CS degree in August 2017 and am actively seeking 
+    opportunities as 
+    a software engineer.  Most of my programming experience is in Java, although I was introduced to programming with
     C and Python.  I am currently teaching myself HTML and CSS, and I hope to make some more time to work on JavaScript, as well.
     Check out my <a href="https://mrdonabizzle.github.io/portfolio.html">Portfolio page</a>
     to see some of my recent projects in Java.</p>
