--- a/portfolio.html
+++ b/portfolio.html
@@ -30,15 +30,15 @@
     <ul>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/Data%20Structures">Data Structures Projects</a>
          I just completed a course in data structures.  The four projects at this link implement data structures like
-        binary search trees, graphs, etc.<br></li>
+        binary search trees, graphs, etc.<br><br></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/AtmMachine/src/atmmachine">ATM Machine Project</a>
         This program implements an ATM machine GUI that allows the user to make transactions with checking and savings
-        accounts.<br></li>
+        accounts.<br><br></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/SequenceCalculator/src/sequencecalculator">Sequence Calculator Project</a>
-       This program implements a calculator GUI that allows the user to calculate a term in a sequence using either recursion or iteration.<br></li>
+       This program implements a calculator GUI that allows the user to calculate a term in a sequence using either recursion or iteration.<br><br></li>
       <li><a href="https://github.com/mrdonabizzle/Java/tree/master/StudentDatabase/src/studentdatabase">Student Database Project</a>
        This program implements a GUI that allows the user to add, modify, or delete entries in a student database.  It was my first
-      project using a hash map.<br></li>
+      project using a hash map.<br><br></li>
     </ul>
     <p><a href="https://github.com/mrdonabizzle">My Github Profile</a></p>
     <img class="picture" src="images/java.png" alt="Java Logo">
